<resources>
    <string name="read_storage_permission" translatable="false">Read and write external storage permission is required to carry out this feature</string>
    <string name="camera_permission" translatable="false">Camera permission is required to carry out this feature</string>
    <string name="audio_permission" translatable="false">Record audio permission is required to carry out this feature</string>
    <string name="file_provider_authority" translatable="false">com.ptithcm.healthcare</string>
    <string name="retry" translatable="false">Retry</string>
    <string name="hc_200" translatable="false">200</string>
    <string name="hc_e" translatable="false">E</string>
    <string name="hc_0000" translatable="false">00:00</string>
    <string name="hc_price" translatable="false">$31.54</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="about_us">About Us</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="home">HOME</string>
    <string name="clothing">SHOP</string>
    <string name="designer">DESIGNERS</string>
    <string name="wishlist">FAVOURITES</string>
    <string name="profile">PROFILE</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="join_us">Join Us</string>
    <string name="empty_wish_list">Your favourite is \n currently empty</string>
    <string name="wish_list_login">Login to create \n your Wishlist</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="add_to_cart">add to cart</string>
    <string name="out_of_stock">out of stock</string>
    <string name="description">description</string>
    <string name="delivery_returns"><![CDATA[delivery & returns]]></string>
    <string name="about_brand">About brand</string>
    <string name="wished">Wished</string>
    <string name="shop">&#160;SHOP</string>
    <string name="size_chart">SIZE CHART</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="done">Done</string>
    <string name="gbp">Gbp</string>
    <string name="women">WOMEN</string>
    <string name="men">MEN</string>
    <string name="kids">KIDS</string>
    <string name="unisex">UNISEX</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_in_normal"><u>Sign In</u></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="by_signing_up_you_agree_with_our_terms_and_conditions" translatable="false">By signing up you agree with our <font fgcolor="#989898">Terms and Conditions</font></string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="customer_service">Customer Service</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="invoices">Invoices</string>
    <string name="invoice">Invoice</string>
    <string name="being_examined">Being Examined</string>
    <string name="waiting">Waiting</string>
    <string name="address_book">Address Book</string>
    <string name="question_product">Question</string>
    <string name="medical_book">Medical examination history</string>
    <string name="invoice_detail">Invoice Detail</string>
    <string name="change_password">Change Password</string>
    <string name="my_details">My Details</string>
    <string name="hi">Hi,</string>
    <string name="delivery_and_returns"><![CDATA[Delivery & Returns]]></string>
    <string name="log_out">Log Out</string>
    <string name="forgot_password_capital">FORGOT PASSWORD</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="appVer">Version %s</string>
    <string name="old_password">Old Password*</string>
    <string name="new_password">New Password*</string>
    <string name="new_password_confirm">Confirm New Password*</string>
    <string name="your_new_password_must_be_at_least_8_characters_1_uppercase_letter_and_1_number">Your new password must be at least 8 characters, 1 uppercase letter and 1 number</string>
    <string name="save_my_new_password">SAVE MY NEW PASSWORD</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="text_count_pager"><![CDATA[<font color=#faab1a>%s/</font>%s]]></string>
    <string name="view_all_categories">View All Categories</string>
    <string name="view_all_designers"><u>View All Designers</u></string>
    <string name="refine">REFINE</string>
    <string name="shop_now">Shop Now</string>
    <string name="search">Search</string>
    <string name="bag">Bag</string>
    <string name="all_categories">All Categories</string>
    <string name="more_from_this_boutique"><u>More from this Boutique</u></string>
    <string name="size_guide"><u>Size Guide</u></string>
    <string name="doctor_info">DOCTOR INFORMATION</string>
    <string name="billing_address">BILLING ADDRESS</string>
    <string name="size">Size</string>
    <string name="color">colours</string>
    <string name="color_">Color</string>
    <string name="size_">Size</string>
    <string name="quantity">Quantity</string>
    <string name="shop_the_look">Shop the Look</string>
    <string name="product">PRODUCTS</string>
    <string name="stories">STORIES</string>
    <string name="about">ABOUT</string>
    <string name="editQuestionErr">Can\'t edit this question</string>
    <string name="editQuestionSuccess">Edit question successful</string>
    <string name="loading_more">Loading moreâ€¦</string>
    <string name="biography">Biography</string>
    <string name="terms_and_return_policy">Terms And Return Policy</string>
    <string name="no_item_found">No item found</string>
    <string name="count_item_found">%d items found</string>
    <string name="dont_have_account"><font fgcolor="#989898">Don\'t have an account?</font> Join Us</string>
    <string name="have_account"><font fgcolor="#989898">Already have an account?</font> <u>Sign In</u></string>
    <string name="continue_logout">Continue logout?</string>
    <string name="logout_me_out">Log me out</string>
    <string name="error_empty">%s can\'t be empty</string>
    <string name="invalid_email">Invalid email</string>
    <string name="addQuestionSuccess">Add question success</string>
    <string name="addQuestionFail">Add question failure</string>
    <string name="invalid_phone">Invalid phone</string>
    <string name="password_size">%s must be at least 8 characters</string>
    <string name="password_upper_case">%s must be at least 1 Uppercase character</string>
    <string name="password_digit">%s must be at least 1 digit</string>
    <string name="sign_up_success">Successfully Registration</string>
    <string name="update_detail_success">Update successfully</string>
    <string name="changePass_success">Update password successfully</string>
    <string name="confirmDelQuestion">Are you sure you want to delete this question</string>
    <string name="address_line_1">Address Line 1*</string>
    <string name="address_line_2_optional">Address Line 2 (optional)</string>
    <string name="country_area">Country Area</string>
    <string name="post_code_zip">Postal Code*</string>
    <string name="shipping_phone">Shipping Phone</string>
    <string name="we_will_only_contact_you_by_phone_if_there_is_a_problem_with_your_order">We will only contact you by phone if there is a problem with your order</string>
    <string name="new_password_not_match">New Password is not match</string>
    <string name="send_reset_link">Send reset link</string>
    <string name="please_provide_your_email">Please provide your email address \nso we can send you the reset link</string>
    <string name="shop_all">Shop All</string>
    <string name="all_stores">ALL STORES</string>
    <string name="currencies">Currencies</string>
    <string name="clear">Clear</string>
    <string name="filter_by">Filter By</string>
    <string name="categories">Categories</string>
    <string name="brands">Brands</string>
    <string name="colours">Colours</string>
    <string name="sizes">Sizes</string>
    <string name="genders">Genders</string>
    <string name="sort_by">Sort By</string>
    <string name="new_items">Newest Items</string>
    <string name="old_items">Oldest Items</string>
    <string name="our_picks">Our Picks</string>
    <string name="price_high_first">Price (High First)</string>
    <string name="price_low_first">Price (Low First)</string>
    <string name="show_result">Show Result</string>
    <string name="show_results">Show Result (%s)</string>
    <string name="applys">Apply (%s)</string>
    <string name="city">City*</string>
    <string name="phone">Phone</string>
    <string name="no_price">No Price</string>
    <string name="apply">Apply</string>
    <string name="delete">Delete</string>
    <string name="add_new_method">Add new method</string>
    <string name="name_on_card">Name on Card*</string>
    <string name="cvv">CVV*</string>
    <string name="your_credit_card_details">YOUR CREDIT CARD DETAILS</string>
    <string name="set_card_as_default_payment">Set card as default payment</string>
    <string name="terms_and_conditions_">Terms and Conditions</string>
    <string name="save_and_continue">SAVE AND CONTINUE</string>
    <string name="add_address">ADD ADDRESS</string>
    <string name="this_message_has_been_deleted"><i>This message has been deleted. </i></string>
    <string name="just_now">Just now</string>
    <string name="one_minute_ago">1 min ago</string>
    <string name="one_hour_ago">1 hour ago</string>
    <string name="one_day_ago">1 day ago</string>
    <string name="yesterday">yesterday</string>
    <string name="today">Today</string>
    <string name="view_profile">View Profile</string>
    <string name="friends">Friends</string>
    <string name="new_message">New Message</string>
    <string name="copy">Copy</string>
    <string name="yesterday_cap">Yesterday</string>
    <string name="small_min">&lt; 1 min</string>
    <string name="one_year_ago">1 year ago</string>
    <string name="minutes_ago">%1$d mins ago</string>
    <string name="hours_ago">%1$d hours ago</string>
    <string name="days_ago">%1$d days ago</string>
    <string name="weeks_ago">%1$d weeks ago</string>
    <string name="months_ago">%1$d months ago</string>
    <string name="years_ago">%1$d years ago</string>
    <string name="in_the_future">In the future</string>
    <string name="bags">Bags</string>
    <string name="t_shirts">T-Shirts</string>
    <string name="shirts">Shirts</string>
    <string name="footwear">Footwear</string>
    <string name="dresses">Dresses</string>
    <string name="activewear">Activewear</string>
    <string name="ready_to_wear">Ready-To-Wear</string>
    <string name="streetwear">Streetwear</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="apply_it_here">Apply it here</string>
    <string name="name">Name</string>
    <string name="specialize">Specialize</string>
    <string name="calendar">CALENDAR</string>
    <string name="file">FILE</string>
    <string name="notification">NOTIFICATION</string>
    <string name="experience">Experience</string>
    <string name="time_advise">Time Advise</string>
    <string name="identity_card">Identity Card</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="drug_allergy">History of drug allergy</string>
    <string name="sick">History of anamnesis</string>
    <string name="surgery">History of surgery</string>
</resources>