<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="isValid"
            type="Boolean" />

        <variable
            name="parentFragment"
            type="com.ptithcm.healthcare.view.authentication.CreateProfileFragment" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="always">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/cover"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:onClick="@{(v) -> parentFragment.onClick(v)}"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_login"
                app:layout_constraintDimensionRatio="2.8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:onClick="@{(v) -> parentFragment.onClick(v)}"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_login"
                app:civ_border_color="#FFFFFF"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="@id/cover"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cover" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtName"
                style="@style/normal_text.EditText.Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_name_field"
                android:gravity="center_vertical"
                android:hint="@string/name"
                android:textCursorDrawable="@drawable/gray_cursor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatar" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtCMND"
                style="@style/normal_text.EditText.Register"
                android:textCursorDrawable="@drawable/gray_cursor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_name_field"
                android:gravity="center_vertical"
                android:hint="@string/identity_card"
                android:inputType="number"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtName" />

            <RadioGroup
                android:id="@+id/edt_gender"
                style="@style/normal_text.EditText.Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtCMND"
                android:orientation="horizontal">

                <TextView
                    android:drawableStart="@drawable/ic_gender_svgrepo_com"
                    android:fontFamily="@font/montserrat_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textCursorDrawable="@drawable/gray_cursor"
                    android:hint="@string/gender" />

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginStart="@dimen/sb_size_40"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/male"
                    android:textColor="@color/gray_dark" />

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginStart="40dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/female"
                    android:textCursorDrawable="@drawable/gray_cursor"
                    android:textColor="@color/gray_dark"/>
            </RadioGroup>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_birthday"
                style="@style/normal_text.EditText.Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_birthday_cake_svgrepo_com"
                android:gravity="center_vertical"
                android:hint="@string/birthday"
                android:focusable="false"
                android:inputType="none"
                android:textCursorDrawable="@drawable/gray_cursor"
                app:layout_constraintTop_toBottomOf="@+id/edt_gender" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_address"
                style="@style/normal_text.EditText.Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_address"
                android:gravity="center_vertical"
                android:hint="@string/address"
                android:textCursorDrawable="@drawable/gray_cursor"
                app:layout_constraintTop_toBottomOf="@+id/edt_birthday" />

            <com.ptithcm.healthcare.widget.LoadingButton
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_32dp"
                android:layout_marginTop="@dimen/layout_margin_40dp"
                android:layout_marginRight="@dimen/layout_margin_32dp"
                android:layout_marginBottom="@dimen/layout_margin_64dp"
                android:onClick="@{(v) -> parentFragment.onClick(v)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_address"
                app:text="@string/save_changes" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>
</layout>